--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,11 @@ plugins:
   - jekyll-remote-theme
   - jekyll-sitemap
   - jekyll-feed
-  - jekyll-paginate
+  - jekyll-paginate-v2
 
-# Blog pagination
-paginate: 5
-paginate_path: "/blog/page:num/"
+# Blog pagination (using paginate-v2 which works better with GitHub Pages)
+pagination:
+  enabled: true
+  per_page: 5
+  permalink: '/blog/page:num/'
+  sort_reverse: true
