--- a/_config.yml
+++ b/_config.yml
@@ -32,13 +32,10 @@ collections:
   education:
     output: false
 
-# Plugins (GitHub Pages compatible only)
+# Plugins (minimal set)
 plugins:
   - jekyll-remote-theme
   - jekyll-sitemap
   - jekyll-feed
-  - jekyll-paginate
 
-# Blog pagination (simple version for GitHub Pages)
-paginate: 5
-paginate_path: "/blog/page:num/"
+# Remove all pagination for now
