fix: Gemfile and config to allow local tests

--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,11 @@ description: "Cloud meets AI"
 url: "https://mrsiejas.github.io"
 baseurl: ""
 
+# Development server settings
+port: 4001
+
 # Theme
-remote_theme: daviddarnes/alembic@main
+theme: alembic-jekyll-theme
 
 # Author details for CV
 author:
@@ -26,6 +29,10 @@ navigation_header:
 
 # Footer navigation (empty to remove the footer links)
 navigation_footer:
+  - title: Contact
+    url: /contact/
+  - title: LinkedIn
+    url: https://www.linkedin.com/in/blazejsiejek/
 
 # Collections for organizing content
 collections:
@@ -36,7 +43,6 @@ collections:
 
 # Plugins (minimal set)
 plugins:
-  - jekyll-remote-theme
   - jekyll-sitemap
   - jekyll-feed
 
